# fabula-ex-machina

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/fabula_ex_machina/: cli.py
