[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "fabula-ex-machina"
version = "0.0.6"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Fabula ex Machina"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["fabula-ex-machina"]


[project.scripts]
fabula-ex-machina = "fabula_ex_machina.cli:run"

[project.urls]
"Homepage" = "https://github.com/fabula-ex-machina/fabula-ex-machina"